# one-of-us

./: .gitignore  Cargo.toml  OneOfUs.sol  README.md  guide.html  guide.md  one_of_us.sol  remappings.txt
app/: Cargo.toml
app/src/: lib.rs
backend/: .env.example  package-lock.json  package.json
backend/src/: config.ts  db.ts  index.ts
client/: Cargo.toml
deploy/: .env.example  .env.test  DeployOneOfUsAbi.s.sol  README.md  classic-tx.ts  config.ts  create-program.ts  fund-program.ts  init-program.ts  package-lock.json  package.json  read-state.ts  test-injected.ts  tsconfig.json  upload-code.ts
frontend/: ARCHITECTURE.md  ENV_SETUP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  kzg-wasm.ts  one_of_us.idl
frontend/src/components/: index.ts
frontend/src/components/FloatingCat/: FloatingCat.css  FloatingCat.tsx
frontend/src/components/Footer/: Footer.css  Footer.tsx
frontend/src/components/Header/: Header.css  Header.tsx
frontend/src/components/JoinSection/: JoinSection.css  JoinSection.tsx
frontend/src/components/SloganCarousel/: SloganCarousel.css  SloganCarousel.tsx
frontend/src/components/StarsBackground/: StarsBackground.css  StarsBackground.tsx  shaders.ts
frontend/src/components/Stats/: Stats.css  Stats.tsx
frontend/src/config/: constants.ts  env.ts
frontend/src/hooks/: useJoinProgram.tsx  useMemberCount.tsx  useSails.tsx  useVaraApi.tsx  useWallet.tsx
